# chad-llm

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: rust.yml
src/: application.rs  cli.rs  commands.rs  data.rs  main.rs  models.rs  openai.rs  response.rs  system_prompt.rs
