[package]
name = "chad-gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
bat = "0.24.0"
clipboard = "0.5.0"
console = "0.15.8"
crossterm = "0.28.1"
dirs = "6.0.0"
futures-util = "0.3.30"
fuzzy-matcher = "0.3.7"
indicatif = "0.17.8"
rand = "0.9.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
strip-ansi-escapes = "0.2.1"
tempfile = "3.16.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
vari = "0.2.1"
whoami = "1.5.2"
